--- a/Views/Profile/Requests.cshtml
+++ b/Views/Profile/Requests.cshtml
@@ -6,7 +6,7 @@
 }
 
 <section class="user-profile">
-    <h1 class="header-title">your profile</h1>
+    <h1 class="header-title">Requests Box</h1>
     <div class="info">
         @foreach (var item in ViewBag.Result)
         {
@@ -19,20 +19,18 @@
                     <button type="submit" class="submit-button" data-req-iid="@item.req.Id"
                         data-req-id="@item.req.ChatRecordId" data-user-id="@item.user_select.Id">Submit</button>
                     
-                    @* <span asp-validation-for="chatrecordid" class="text-danger"></span> *@
                 </div>
 
                 <div class="mb-1" id="@item.user_select.Name">
                     <button type="submit" class="cancel-button" data-req-iid="@item.user_select.Name"
                         data-req-id="@item.req.ChatRecordId" data-user-id="@item.user_select.Id">Cancel</button>
                     
-                    @* <span asp-validation-for="chatrecordid" class="text-danger"></span> *@
                 </div>
             </tr>
         }
     </div>
-    <button class="btn btn-danger back" id="back">Back</button>
-    <a asp-action="Request" class="btn btn-warning reciepts">reciepts</a>
+    <a class="btn btn-danger back-btn" href="/profile">Back</a>
+    <a asp-action="groups" class="btn btn-warning groups-btn">View Group</a>
 </section>
 
 
