--- a/wwwroot/css/groups.css
+++ b/wwwroot/css/groups.css
@@ -1,6 +1,47 @@
+main {
+    padding: 3rem;
+
+}
+
+main > h2{
+    margin-bottom: 2rem;
+    border-bottom: 2px solid var(--light-color);
+    padding-bottom: 1rem;
+
+}
 section{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     gap: 3rem;
+    padding: 1rem;
+}
+
+img{
+    width: 10rem;
+    height: 10rem;
+    object-fit: cover;
+}
+
+.group{
+    background-color: var(--dark-color);
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    box-shadow: 0 0 10px 0 var(--light-color);
+    transition: transform 0.3s;
+}
+
+.group:hover{
+    transform: scale(1.05);
+}
+
+input[type="submit"]{
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
 }
