--- a/Views/Admin/Addprogram.cshtml
+++ b/Views/Admin/Addprogram.cshtml
@@ -10,86 +10,78 @@
 @using System.Threading.Tasks;
 
 @{
-    ViewData["Title"] = "Add locate Page";
+    ViewData["Title"] = "Add Program Page";
     ViewData["Styles"] = "~/css/addProgram.css";
-    ViewData["Scripts"] = "~/js/addProgram.js";
+    @* ViewData["Scripts"] = "~/js/addProgram.js"; *@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row d-flex align-items-center justify-content-center">
-    <div class="col-md-3 card p-3">
-        <h2 class="text-center text-info">Addprogram</h2>
-        <form asp-action="Addprogram" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-1">
-                <label asp-for="Titlemovie" class="control-label"></label>
-                <select asp-for="Titlemovie" class="form-control">
-                    @foreach (var i in (IEnumerable<MovieEntity>)ViewBag.movie)
-                    {
-                        <option value="@i.Id">@i.Title</option>
-                    }
-                </select>
-            </div>
-
-            <div class="mb-1">
-                <label asp-for="Cinema" class="control-label"></label>
-                <select asp-for="Cinema" id="cinemaSelect" class="form-control">
-                    @foreach (var i in (IEnumerable<CinemaEntity>)ViewBag.cinema)
-                    {
-                        <option value="@i.Id">@i.Enterprise</option>
-                    }
-                </select>
-            </div>
-
-            <div class="mb-1">
-                <label asp-for="County" class="control-label"></label>
-                <select id="countySelect" asp-for="County" class="form-control">
-                    @{
-
-                        var uniqueCounties = ((IEnumerable<PlaceEntity>)ViewBag.place)
-                        .GroupBy(x => x.County)
-                        .Select(g => g.First());
-                    }
-                    @foreach (var item in uniqueCounties)
-                    {
-                        <option value="@item.County">@item.County</option>
-                    }
-                </select>
-            </div>
-
-            <div class="mb-1">
-                <label asp-for="Canton" class="control-label"></label>
-                <select id="cantonSelect" asp-for="Canton" class="form-control">
-                    <option>Please select a county first</option>
-                </select>
-            </div>
-
-            @* <div class="form-group">
-            <label asp-for="Showtime">DateTime (UTC):</label>
-            <input asp-for="Showtime" type="datetime-local" id="dateTimeUtc" name="dateTimeUtc" class="form-control" />
-            </div> *@
-
-            <div class="mb-1">
-                <label asp-for="Showtime">ShowTime</label>
-                @Html.TextBoxFor(x => x.Showtime, "{yyyy-MM-ddTHH:mm:ss}", new
-                    {
-                        @class = "form-control",
-                        required = "required",
-                        @type = "datetime-local"
-                    })
-            </div>
-
-
-            <div class="row">
-                <div class="col-4">
-                    <input type="submit" value="Add" class="btn btn-primary btn-sm float-end" />
-                </div>
-            </div>
-        </form>
+<h2 class="text-center text-info">Addprogram</h2>
+<form asp-action="Addprogram" method="post" asp-route-returnurl="@ViewData["ReturnUrl"]">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-details">
+        <label asp-for="Titlemovie" class="control-label"></label>
+        <select asp-for="Titlemovie" class="form-control">
+            @foreach (var i in (IEnumerable<MovieEntity>)ViewBag.movie)
+            {
+                <option value="@i.Id">@i.Title</option>
+            }
+        </select>
     </div>
-</div>
+
+    <div class="form-details">
+        <label asp-for="Cinema" class="control-label"></label>
+        <select asp-for="Cinema" id="cinemaSelect" class="form-control">
+            @foreach (var i in (IEnumerable<CinemaEntity>)ViewBag.cinema)
+            {
+                <option value="@i.Id">@i.Enterprise</option>
+            }
+        </select>
+    </div>
+
+    <div class="form-details">
+        <label asp-for="County" class="control-label"></label>
+        <select id="countySelect" asp-for="County" class="form-control">
+            @{
+
+                var uniqueCounties = ((IEnumerable<PlaceEntity>)ViewBag.place)
+                .GroupBy(x => x.County)
+                .Select(g => g.First());
+            }
+            @foreach (var item in uniqueCounties)
+            {
+                <option value="@item.County">@item.County</option>
+            }
+        </select>
+    </div>
+
+    <div class="form-details">
+        <label asp-for="Canton" class="control-label"></label>
+        <select id="cantonSelect" asp-for="Canton" class="form-control">
+            <option>Please select a county first</option>
+        </select>
+    </div>
+
+    <div class="form-details">
+        <label asp-for="Showtime">ShowTime</label>
+        @Html.TextBoxFor(x => x.Showtime, "{yyyy-MM-ddTHH:mm:ss}", new
+            {
+                @class = "form-control",
+                required = "required",
+                @type = "datetime-local"
+            })
+    </div>
+
+
+    <div class="row">
+        <div class="col-4">
+            <input type="submit" value="Add" class="btn btn-primary btn-sm float-end" />
+        </div>
+    </div>
+</form>
 
 @section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         // using fetch to load data
         const getDateTime = async (id) => {
