--- a/Views/Chat/createRoom.cshtml
+++ b/Views/Chat/createRoom.cshtml
@@ -1,11 +1,11 @@
 @{
     ViewData["Title"] = "Create room";
-    ViewData["Styles"] = "~/css/createRoom.css";
-    ViewData["Scripts"] = "~/js/createRoom.js";
+    @* ViewData["Styles"] = "~/css/createRoom.css"; *@
+    @* ViewData["Scripts"] = "~/js/createRoom.js"; *@
     Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
 
-<div class="main-container">
+@* <div class="main-container">
     <i class="fas fa-chevron-left" id="back-movie"></i>
     <i class="fas fa-chevron-left" id="back-date"></i>
 
@@ -19,4 +19,4 @@
     <div class="date-slider">
         <div class="date-container"></div>
     </div>
-</div>
+</div> *@
