--- a/wwwroot/css/createRoom.css
+++ b/wwwroot/css/createRoom.css
@@ -1,10 +1,28 @@
 .main-container{
-    position: relative;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     gap: 5rem;
     flex-direction: column;
     margin-inline: auto;   
     margin-block: 5rem;
+    background-color: var(--dark-color);
+    align-items: center;
+    justify-content: center;
+    width: max-content;
+    padding: 1rem 3rem;
+
+}
+
+.form-details{
+    display: flex;
+    flex-direction: column;
+    border-radius: 1rem;
+    box-shadow: 0 0 10px 0 var(--dark-color);
+
+
 }
 
 i{
