--- a/wwwroot/css/joinRoom.css
+++ b/wwwroot/css/joinRoom.css
@@ -1,5 +1,17 @@
 
 /* CREATE-ROOM-CARD */
+
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    margin-inline: auto;
+    width:100%;
+}
+
+
 .create-room-card {
     margin-left: 30px;
     margin-right: 30px;
